<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/display_empty"
        android:id="@+id/displayTextView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="right"
        android:background="@color/aero_blue" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_seven"
        android:id="@+id/button_seven"
        android:layout_below="@+id/displayTextView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_eight"
        android:id="@+id/button_eight"
        android:layout_alignBottom="@+id/button_seven"
        android:layout_toEndOf="@+id/button_seven" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_nine"
        android:id="@+id/button_nine"
        android:layout_alignBottom="@+id/button_eight"
        android:layout_toEndOf="@+id/button_eight" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_four"
        android:id="@+id/button_four"
        android:layout_below="@+id/button_seven"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_five"
        android:id="@+id/button_five"
        android:layout_alignBottom="@+id/button_four"
        android:layout_toEndOf="@+id/button_four" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_six"
        android:id="@+id/button_six"
        android:layout_alignBottom="@+id/button_five"
        android:layout_toEndOf="@+id/button_five" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_one"
        android:id="@+id/button_one"
        android:layout_below="@+id/button_four"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_two"
        android:id="@+id/button_two"
        android:layout_alignTop="@+id/button_one"
        android:layout_toEndOf="@+id/button_one" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_three"
        android:id="@+id/button_three"
        android:layout_above="@+id/button_decimal"
        android:layout_toEndOf="@+id/button_decimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_zero"
        android:id="@+id/button_zero"
        android:layout_below="@+id/button_one"
        android:layout_toStartOf="@+id/button_two" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_decimal"
        android:id="@+id/button_decimal"
        android:layout_alignBottom="@+id/button_zero"
        android:layout_toEndOf="@+id/button_zero" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_clear"
        android:id="@+id/button_clear"
        android:layout_below="@+id/button_two"
        android:layout_toEndOf="@+id/button_decimal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_add"
        android:id="@+id/button_add"
        android:layout_alignBottom="@+id/button_nine"
        android:layout_toEndOf="@+id/button_nine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_subtract"
        android:id="@+id/button_subtract"
        android:layout_below="@+id/button_nine"
        android:layout_toEndOf="@+id/button_nine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_multiply"
        android:id="@+id/button_multiply"
        android:layout_alignTop="@+id/button_three"
        android:layout_toEndOf="@+id/button_three" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key_divide"
        android:id="@+id/button_divide"
        android:layout_alignBottom="@+id/button_clear"
        android:layout_toEndOf="@+id/button_clear" />

    <Button
        android:layout_width="@dimen/button_equals"
        android:layout_height="wrap_content"
        android:text="@string/key_equal"
        android:id="@+id/button_equal"
        android:layout_below="@+id/button_zero"
        android:layout_alignParentStart="true" />

</RelativeLayout>
